--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,13 +22,16 @@
     "Köln",
     "LEARNINGOUTCOMES",
     "Lern",
+    "ltnp",
     "mathe",
     "mathebuddy",
     "Mathematik",
     "multila",
     "outfile",
+    "resave",
     "Schwenk",
     "SMPL",
-    "Stiftung"
+    "Stiftung",
+    "userid"
   ]
 }
