--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/mathebuddy/mathebuddy-ide#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
@@ -37,6 +41,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0"
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.0",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "mysql": "^2.18.1"
   }
 }
