server refactoring + initial HTML implementation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,6 @@
         "allowedNames": ["self", "this_"]
       }
     ]
-  }
-  //"ignorePatterns": ["src/**/*..ts"]
+  },
+  "ignorePatterns": ["server.js"]
 }
