--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Integrated Development Environment (IDE) for the mathe:buddy App",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.build.json && node ./build.mjs"
+    "build": "tsc --project tsconfig.build.json && node ./build.mjs",
+    "server": "./server.sh"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/mathebuddy/mathebuddy-ide#readme",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/codemirror": "^5.60.5",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/mysql": "^2.15.21",
@@ -40,9 +42,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@geedmo/yamm": "^4.0.1",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
+    "codemirror": "^5.65.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1"
