--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@geedmo/yamm": "^4.0.1",
+    "@types/bootstrap": "^5.2.4",
+    "@types/diff": "^5.0.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
     "codemirror": "^5.65.8",
+    "diff": "^5.1.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1"
