--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "editor.formatOnSave": true,
   "cSpell.words": [
     "Andreas",
+    "btnradio",
     "clike",
     "codemirror",
     "Decrementation",
