--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,10 +19,12 @@
     "FREIRAUM",
     "gamifizierte",
     "geedmo",
+    "Heiko",
     "Hochschullehre",
     "Hoehere",
     "IMAG",
     "Incrementation",
+    "Knospe",
     "Koeln",
     "Köln",
     "LEARNINGOUTCOMES",
