--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "diff": "^5.1.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "glob": "^8.0.3",
     "mathebuddy-compiler": "file:../mathebuddy-compiler",
     "mysql": "^2.18.1"
   }
